dataset1235/2025-2/2947369575/users/845574893/executions/1003782500_3455942218.log
== SUBMISSION (2025-08-27 22:10:38)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(input("Qual o valor unitario do jogo? "))
valor_uni = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total=(valor_uni*8)+45
saldo=valor_disp-total

# Impressao do valor total e do saldo:
print(f"{total:.lf}")
print(f"{saldo:.lf}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo=valor_disp-total
          ^^^^^^^^^^
NameError: name 'valor_disp' is not defined
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo=valor_disp-total
          ^^^^^^^^^^
NameError: name 'valor_disp' is not defined
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo=valor_disp-total
          ^^^^^^^^^^
NameError: name 'valor_disp' is not defined
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo=valor_disp-total
          ^^^^^^^^^^
NameError: name 'valor_disp' is not defined
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo=valor_disp-total
          ^^^^^^^^^^
NameError: name 'valor_disp' is not defined
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo=valor_disp-total
          ^^^^^^^^^^
NameError: name 'valor_disp' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:12:08)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(input("Qual o valor unitario do jogo? "))
valor_disp = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni*8)+45
saldo = valor_disp - total

# Impressao do valor total e do saldo:
print(f"{total:.1f}")
print(f"{saldo:.1f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:11:19)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(input("Qual o valor unitario do jogo? "))
valor_disp = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni*8)+45
saldo = valor_disp - total

# Impressao do valor total e do saldo:
print(f"{total:.lf}")
print(f"{saldo:.lf}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:11:09)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(input("Qual o valor unitario do jogo? "))
valor_disp = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total=(valor_uni*8)+45
saldo=valor_disp-total

# Impressao do valor total e do saldo:
print(f"{total:.lf}")
print(f"{saldo:.lf}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:11:09)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(input("Qual o valor unitario do jogo? "))
valor_disp = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total=(valor_uni*8)+45
saldo=valor_disp-total

# Impressao do valor total e do saldo:
print(f"{total:.lf}")
print(f"{saldo:.lf}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:10:13)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(input("Qual o valor unitario do jogo? "))
valor_uni = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni*8)+45
saldo = valor_disp - total

# Impressao do valor total e do saldo:
print(f"{total:.lf}")
print(f"{saldo:.lf}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disp - total
            ^^^^^^^^^^
NameError: name 'valor_disp' is not defined
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disp - total
            ^^^^^^^^^^
NameError: name 'valor_disp' is not defined
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disp - total
            ^^^^^^^^^^
NameError: name 'valor_disp' is not defined
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disp - total
            ^^^^^^^^^^
NameError: name 'valor_disp' is not defined
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disp - total
            ^^^^^^^^^^
NameError: name 'valor_disp' is not defined
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    saldo = valor_disp - total
            ^^^^^^^^^^
NameError: name 'valor_disp' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:11:20)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(input("Qual o valor unitario do jogo? "))
valor_disp = float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni*8)+45
saldo = valor_disp - total

# Impressao do valor total e do saldo:
print(f"{total:.lf}")
print(f"{saldo:.lf}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(f"{total:.lf}")
          ^^^^^^^^^^^^^^
ValueError: Format specifier missing precision
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
